2004-04-16  John Luke  <jluke@cfl.rr.com>

	* JavaBindingCompilerService.cs:
	rework error parsing to work off of Streams instead of temp files
	allows javac errors to work, gcj maybe not	
	set the column of the error

2004-04-09  John Luke  <jluke@cfl.rr.com>

	* JavaBindingCompilerService.cs: account for classpath when compiling,
	work with gcj or javac, cleanup old code
	* Gui/ProjectConfigurationPropertyPanel.cs: rough port, needs major HIG love,
	cleanup, add RadioButtons to select from gcj and javac
	* JavaBindingExecutionService.cs: use ikvm instead of java runtime
	* Parser/*: make a copy of the CSharpBinding/Parser in case I am crazy enough
	to port the parser to work with Java (not built yet)
	* Project/JavaCompilerParameters.cs: add javac/gcj .Compiler property,
	fix CompilerPath from being hardcoded

2004-03-25  John Luke  <jluke@cfl.rr.com>
	
	import from SD and make it build with our
	namespaces and SourceEditor
	change to work like CSharpBinding 