@@ -1,0 +1,11 @@
+using System;
+
+namespace JavaBinding
+{
+	public enum JavaCompiler
+	{
+		Javac,
+		Gcj,
+	}
+}
+
