@@ -13,7 +13,9 @@ FILES = ./Gui/ProjectConfigurationPropertyPanel.cs \
 ./Project/JavaCompilerParameters.cs \
 ./Project/JavaProject.cs \
 ./JavaBindingCompilerServices.cs \
+./JavaCompiler.cs \
 ./JavaLanguageBinding.cs \
+./JavaRuntime.cs \
 ./FormatingStrategy/JavaFormattingStrategy.cs \
 ./JavaBindingExecutionServices.cs \
 ./ProjectTreeBuilder/JavaNodeBuilder.cs
